--- a/form/register.html
+++ b/form/register.html
@@ -64,7 +64,7 @@
                     <input type="role" name="role" id="role" hidden value="user" />
 
                     <input type="submit" value="Daftar" class="w-full block bg-blue-500 hover:bg-blue-400 focus:bg-blue-400 text-white font-semibold rounded-lg
-                    px-4 py-3 mt-6" onclick="Register()"></input>
+                    px-4 py-3 mt-6" id="form"></input>
                 </form>
 
                 <div class="mt-7 grid grid-cols-3 items-center text-gray-500">
@@ -149,7 +149,7 @@
     </section>
 </body>
 
-<script type="module" src="../scripts/postRegister.js">
+<script type="module" src="../js/controller/controllerRegister.js">
 </script>
 
 <!-- </body> -->
