--- a/form/register.html
+++ b/form/register.html
@@ -1,157 +1,46 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#0ed3cf">
-    <meta name="msapplication-TileColor" content="#0ed3cf">
-    <meta name="theme-color" content="#0ed3cf">
-    <!-- css -->
-    <link rel="stylesheet" href="../css/styleLogin.css">
-    <link href="../img/favicon.ico" rel="icon">
-
-    <meta property="og:image"
-        content="http://tailwindcomponents.com/storage/8671/conversions/temp98389-ogimage.jpg?v=2023-02-23 09:15:39" />
-    <meta property="og:image:width" content="1280" />
-    <meta property="og:image:height" content="640" />
-    <meta property="og:image:type" content="image/png" />
-
-    <meta property="og:url"
-        content="https://tailwindcomponents.com/component/tailwind-css-alpinejs-sign-up-with-illustration/landing" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
-    <meta name="twitter:image"
-        content="http://tailwindcomponents.com/storage/8671/conversions/temp98389-ogimage.jpg?v=2023-02-23 09:15:39" />
-
-    <title>Nugis - Halaman Daftar</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Sign In | Nugis Orange</title>
+    <!-- Include Tailwind CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        /* Custom styles can be added here */
+    </style>
 </head>
 
-<!-- <body class="bg-gray-200"> -->
+<body class="bg-gray-100">
 
-<!-- halaman login start -->
+<!-- Sign Up Page -->
+<div class="min-h-screen bg-gray-100 flex justify-center items-center">
+    <form class="bg-white p-8 rounded shadow-md w-80">
+      <h2 class="text-2xl font-bold mb-6 text-center">Sign Up</h2>
+      <div class="mb-4">
+        <label for="username" class="block text-gray-700 font-bold mb-2">Username</label>
+        <input type="text" id="username" name="username" class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500" placeholder="Enter your username">
+      </div>
+      <div class="mb-4">
+        <label for="email" class="block text-gray-700 font-bold mb-2">Email</label>
+        <input type="email" id="email" name="email" class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500" placeholder="Enter your email">
+      </div>
+      <div class="mb-6">
+        <label for="password" class="block text-gray-700 font-bold mb-2">Password</label>
+        <input type="password" id="password" name="password" class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500" placeholder="Enter your password">
+      </div>
+      <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full">Sign Up</button>
+    </form>
+  </div>
+  
+  <!-- Footer Section -->
+<footer class="bg-gray-200 py-4 text-center">
+    <p class="text-gray-600">© 2023 Nugis - All Rights Reserved</p>
+  </footer>
 
-<body class="max-h-screen">
-    <section class="border-red-500 bg-blue-600 min-h-screen flex items-center justify-center">
-        <div class="bg-gray-100 p-5 flex rounded-2xl shadow-lg max-w-3xl">
-            <div class="md:w-1/2 px-5">
-                <h1 class="text-3xl font-bold text-[#002D74] text-center"><a href="../index.html">Nugis<span style="color: black;">.</span>Orange</a></h1><br>
-                <h1 class="text-1x1 text-center">Silahkan Daftar Untuk Akses Nugis</h1>
-                <form class="mt-6" id="formlogin">
-                    <div>
-                        <label class="block text-gray-700">Username</label>
-                        <input type="text" id="username" placeholder="Masukan Username Anda"
-                            class="w-full px-4 py-3 rounded-lg bg-gray-200 mt-2 border focus:border-blue-500 focus:bg-white focus:outline-none"
-                            autofocus autocomplete required>
-                    </div>
-
-                    <div class="mt-4">
-                        <label class="block text-gray-700">Password</label>
-                        <input type="password" id="password" placeholder="Masukan Kata Sandi Anda" minlength="6" class="w-full px-4 py-3 rounded-lg bg-gray-200 mt-2 border focus:border-blue-500
-                        focus:bg-white focus:outline-none" required>
-                    </div>
-
-                    <input type="role" name="role" id="role" hidden value="user" />
-
-                    <input type="submit" value="Daftar" class="w-full block bg-blue-500 hover:bg-blue-400 focus:bg-blue-400 text-white font-semibold rounded-lg
-                    px-4 py-3 mt-6" id="form"></input>
-                </form>
-
-                <div class="mt-7 grid grid-cols-3 items-center text-gray-500">
-                    <hr class="border-gray-500" />
-                    <p class="text-center text-sm">OR</p>
-                    <hr class="border-gray-500" />
-                </div>
-
-                <div class="my-4 flex items-center justify-start space-x-2">
-                    <p class="is-size-7"> Sudah memiliki akun? <a href="./login.html"
-                            class="text-sm font-semibold text-gray-700 hover:text-blue-700 focus:text-blue-700">Masuk disini</a>
-                    </p>
-
-                    <!-- <p class="is-size-7"> Are you admin ? <a href="./loginadmin.html"
-                            class="text-sm font-semibold text-gray-700 hover:text-blue-700 focus:text-blue-700">Click
-                            Here</a>
-                    </p> -->
-                </div>
-            </div>
-            <!-- halaman login end -->
-
-            <div class="w-1/2 md:block hidden ">
-                <!-- <img src="https://images.unsplash.com/photo-1614741118887-7a4ee193a5fa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80" class="rounded-2xl" alt="page img"> -->
-                <svg class="text-blue-600 w-5/6" style="transform: scale(-1,1);" xmlns="http://www.w3.org/2000/svg"
-                    data-name="Layer 1" width="582.544228" height="350.249375" viewBox="0 0 832.20604 500.35625"
-                    xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <path
-                        d="M227.31663,699.06c-.05567-.24512-5.44-24.79785,5.55615-45.19043,10.99609-20.39166,34.46826-29.38477,34.7041-29.47363l1.07275-.40235.25342,1.11817c.05566.24511,5.43994,24.79785-5.55615,45.19043-10.99561,20.39166-34.46826,29.38476-34.7041,29.47363l-1.07325.40234Zm39.86181-72.33783c-4.70166,2.02246-23.25781,10.874-32.54492,28.09668-9.28809,17.22461-6.48584,37.59375-5.59229,42.63086,4.69971-2.01758,23.24854-10.85547,32.54493-28.09668C270.87375,652.1293,268.07248,631.76211,267.17844,626.72213Z"
-                        transform="translate(-183.89698 -199.82188)" fill="#f1f1f1"></path>
-                    <path
-                        d="M254.94373,663.14907c-19.76056,11.88861-27.371,35.50269-27.371,35.50269s24.42779,4.3388,44.18835-7.54981,27.371-35.50268,27.371-35.50268S274.70429,651.26046,254.94373,663.14907Z"
-                        transform="translate(-183.89698 -199.82188)" fill="#f1f1f1"></path>
-                    <path
-                        d="M554.19262,472.56441a10.83726,10.83726,0,0,0-10.47951-12.89681l-9.15082-23.01244-15.3409,2.15012,13.37918,32.31652a10.896,10.896,0,0,0,21.59205,1.44261Z"
-                        transform="translate(-183.89698 -199.82188)" fill="#9f616a"></path>
-                    <path
-                        d="M525.92964,464.47855l-4.75346-11.3351-29.62149-56.38484,1.61062-104.33228.30923-.041c18.954-2.50423,31.77818,84.82857,32.315,88.54784l18.71553,64.00809,4.45518,14.10849Z"
-                        transform="translate(-183.89698 -199.82188)" fill="currentColor"></path>
-                    <polygon points="296.518 484.658 310.92 484.657 317.771 429.106 296.515 429.107 296.518 484.658"
-                        fill="#9f616a"></polygon>
-                    <path
-                        d="M476.741,679.77772l28.363-.00114h.00115a18.07611,18.07611,0,0,1,18.07514,18.07485v.58737l-46.43846.00172Z"
-                        transform="translate(-183.89698 -199.82188)" fill="#2f2e41"></path>
-                    <polygon points="164.095 462.715 175.912 470.949 213.294 429.291 195.854 417.138 164.095 462.715"
-                        fill="#9f616a"></polygon>
-                    <path
-                        d="M347.66667,656.57887l23.27053,16.21554.00094.00065a18.07611,18.07611,0,0,1,4.49515,25.16356l-.33583.4819L336.997,671.89089Z"
-                        transform="translate(-183.89698 -199.82188)" fill="#2f2e41"></path>
-                    <path
-                        d="M472.49955,671.42229l-.62235-104.21007L462.81533,501.686,445.9204,559.31028l-.03285.04733-61.225,88.88515-23.82325-12.07048.13051-.31012c1.45591-3.46284,35.76216-84.7936,44.98333-84.7936a4.97985,4.97985,0,0,0,4.24236-1.86422c2.70645-3.614.50244-11.28284.47983-11.35983-2.63969-10.94588,3.99742-14.67362,5.3193-15.296l3.55555-73.397.36857.02543,96.38955,6.76108-4.04386,91.76589-8.69878,120.23153-.29881.03391Z"
-                        transform="translate(-183.89698 -199.82188)" fill="#2f2e41"></path>
-                    <path
-                        d="M517.781,472.20177l-.41678-.03391L413.69966,463.8117l.25589-34.29989,5.07382-89.55836.02878-.06216,20.66277-44.85865,14.6473-6.63252,21.37023-1.12461.0521.01307,19.50283,4.83187,20.288,145.63873Z"
-                        transform="translate(-183.89698 -199.82188)" fill="currentColor"></path>
-                    <circle cx="465.99537" cy="251.83011" r="27.29373"
-                        transform="translate(-247.58414 54.55847) rotate(-28.66324)" fill="#9f616a"></circle>
-                    <path
-                        d="M438.54633,258.68144v-10.6343s-8.576-10.10035.85759-12.64464c0,0,2.57278-25.44285,24.87023-13.56952,0,0,30.87339-5.08857,27.443,12.72143,0,0,7.71835-4.64962,5.14556,7.22372L491.88689,260.904s2.40306-12.634-5.31529-14.33024l-4.288-2.54429s-12.00632,11.87334-30.0158-2.54428c0,0-7.71834-1.84217-6.86075,5.79069S438.54633,258.68144,438.54633,258.68144Z"
-                        transform="translate(-183.89698 -199.82188)" fill="#2f2e41"></path>
-                    <path
-                        d="M463.15358,446.58748a10.83729,10.83729,0,0,0-12.62376-10.80688l-13.13193-20.99672-14.706,4.86818,18.96129,29.391a10.896,10.896,0,0,0,21.50042-2.45556Z"
-                        transform="translate(-183.89698 -199.82188)" fill="#9f616a"></path>
-                    <path
-                        d="M429.23633,439.96884l-23.75756-48.2346.021-.11726c.09572-.53405,9.659-53.63372,16.97316-73.15156,7.36048-19.64146,17.43552-23.585,17.86078-23.74325l.21263-.07912,9.03379,8.66522-12.51394,83.527,13.489,40.28392Z"
-                        transform="translate(-183.89698 -199.82188)" fill="currentColor"></path>
-                    <rect x="786.20604" width="46" height="46" fill="#f1f1f1"></rect>
-                    <rect x="426.20604" y="179" width="46" height="46" fill="#f1f1f1"></rect>
-                    <path d="M635.92184,404.66451H999.59653V220.55582H635.92184Z"
-                        transform="translate(-183.89698 -199.82188)" fill="#fff"></path>
-                    <path
-                        d="M1002.59656,407.66458H632.92176V217.5557h369.6748Zm-363.6748-6h357.6748V223.5557H638.92176Z"
-                        transform="translate(-183.89698 -199.82188)" fill="#e5e5e5"></path>
-                    <rect x="495.67778" y="85.31585" width="279.80647" height="9.27916" fill="#e5e5e5"></rect>
-                    <rect x="495.67778" y="107.81893" width="279.80647" height="9.27916" fill="#e5e5e5"></rect>
-                    <rect x="723.48425" y="141.04542" width="52" height="8.05267" fill="currentColor"></rect>
-                    <path d="M565.897,700.13773h-381a1,1,0,1,1,0-2h381a1,1,0,0,1,0,2Z"
-                        transform="translate(-183.89698 -199.82188)" fill="#cbcbcb"></path>
-                </svg>
-            </div>
-
-        </div>
-    </section>
+  
 </body>
-
-<script type="module" src="../js/controller/controllerRegister.js">
-</script>
-
-<!-- </body> -->
+<script src="module" href="./js/index.js"></script>
 
 </html>
