--- a/index.html
+++ b/index.html
@@ -2,150 +2,116 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Pak.Arbi - Halaman Pak.Arbi</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
-
-    <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
-
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Ubuntu:wght@500;700&display=swap"
-        rel="stylesheet">
-
-    <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
-
-    <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Informasi eksekutif | Nugis Orange</title>
+    <!-- Include Tailwind CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        /* Custom styles can be added here */
+    </style>
 </head>
 
-<body>
-    <!-- Spinner Start -->
+<body class="bg-gray-100">
 
-    <!-- Spinner End -->
-
-
-    <!-- Navbar Start -->
-    <div class="container-fluid sticky-top">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-dark p-0">
-                <a href="index.html" class="navbar-brand">
-                    <h1 class="text-white">Nugis<span class="text-dark">.</span>Orange</h1>
-                </a>
-                <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
-                    data-bs-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <div class="navbar-nav ms-auto">
-                        <a href="./form/login.html" class="nav-item nav-link active">Login</a>
-                        <a href="./form/register.html" class="nav-item nav-link">Register</a>
-                        <a href="./chap04/index.html" class="nav-item nav-link">chap04</a>
-                    </div>
+    <!-- Navigation -->
+    <nav class="bg-white shadow-md">
+        <div class="max-w-7xl mx-auto px-4">
+            <div class="flex justify-between items-center h-16">
+                <!-- Logo -->
+                <div class="flex-shrink-0">
+                    <img src="./img/logo_nugis.png" alt="Logo" class="h-10" href="#">
                 </div>
-            </nav>
-        </div>
-    </div>
-    <!-- Navbar End -->
 
+                <!-- Menu -->
+                <div class="flex space-x-4">
+                    <a href="#about" class="text-gray-600 hover:text-gray-900">About</a>
+                    <select onchange="location = this.value;" class="text-gray-600 hover:text-gray-900">
+                        <option value="#chapter1">Chapter 1</option>
+                        <option value="#chapter2">Chapter 2</option>
+                        <option value="#chapter3">Chapter 3</option>
+                        <option value="#chapter4">Chapter 4</option>
+                        <option href="./form/login.html">Form Sign In | Chapter 5</option>
+                        <option value="#chapter6">Chapter 6</option>
+                        <option value="#chapter7">Chapter 7</option>
+                    </select>
+                </div>
 
-    <!-- Hero Start -->
-    <div class="container-fluid pt-9 bg-primary hero-header mb-1">
-        <div class="container pt-5"><br>
-            <div class="row g-5 pt-5">
-                <div class="col-lg-6 align-self-center text-center text-lg-start mb-lg-5">
-                    <div class="btn btn-sm border rounded-pill text-white px-3 mb-3 animated slideInRight">Nugis Orange
-                    </div>
-                    <h1 class="display-4 text-white mb-4 animated slideInRight">Tugas Gis</h1>
-                    <p class="text-white mb-4 animated slideInRight">GIS | Geo System information
-                        HTML,GCF,JS,MAPS.</p>
+                <!-- Sign Up, Sign In, About buttons -->
+                <div class="flex space-x-4">
+                    <a href="./form/register.html" class="bg-yellow-500 text-white px-4 py-2 rounded-md hover:bg-orange-600">Sign Up</a>
+                    <a href="./form/login.html" class="bg-gray-800 text-white px-4 py-2 rounded-md hover:bg-blue-900">Sign In</a>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Hero End -->
+    </nav>
 
+<div class="bg-gray-100">
 
-    <!-- About Start -->
-
-    <!-- About End -->
-
-
-    <!-- Feature Start -->
-
-    <!-- Feature End -->
-
-
-    <!-- Case Start -->
-
-    <!-- Case End -->
-
-
-    <!-- FAQs Start -->
-
-    <!-- FAQs Start -->
-
-
-    <!-- Team Start -->
-
-    <!-- Team End -->
-
-
-    <!-- Testimonial Start -->
-
-    <!-- Testimonial End -->
-
-
-    <!-- Newsletter Start -->
-
-    <!-- Newsletter End -->
-
-
-    <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-white-50 footer pt-5">
-        <div class="container wow fadeIn" data-wow-delay="0.1s">
-            <div class="copyright">
-                <div class="row">
-                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">NugisOrange2023</a>, All Right Reserved.
-
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                    </div>
-                </div>
+    <div class="max-w-md mx-auto mt-10 bg-white p-6 rounded-md shadow-md">
+        <!-- Hero section -->
+        <section class="text-center">
+            <div class="mb-6">
+                <h1 class="text-4xl font-bold text-red-600">Welcome to Nugis Blog</h1>
+                <p class="text-lg mt-4 text-gray-600">Explore the apps Nugis</p>
             </div>
-        </div>
+            <div class="mb-6 flex justify-center">
+                <img src="./img/logo_nugis.png" alt="Nugis Logo" class="w-20 h-20 animate-bounce">
+            </div>
+        </section>
     </div>
-    <!-- Footer End -->
+    
 
+  <!-- Content -->
+<main class="max-w-7xl mx-auto px-4 py-8">
+    <!-- Blog Content -->
+    <div class="prose">
+      <!-- Content for the current year -->
+      <h1 class="text-3xl font-bold mb-4">Blog Content - Nugis <span id="currentYear"></span></h1>
+      <div id="blogPosts" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+        <!-- Blog posts as cards -->
+        <!-- Sample blog post card -->
+        <div class="border border-gray-300 rounded-md p-4">
+          <h2 class="text-xl font-semibold mb-2"> Judul Informasi</h2>
+          <p class="text-gray-600 mb-4">Deskripsi singkat tentang informasi.</p>
+          <a href="#" class="text-blue-500 hover:underline">Read More</a>
+        </div>
 
-    <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top pt-2"><i class="bi bi-arrow-up"></i></a>
+        <div class="border border-gray-300 rounded-md p-4">
+          <h2 class="text-xl font-semibold mb-2"> Judul Informasi</h2>
+          <p class="text-gray-600 mb-4">Deskripsi singkat tentang informasi.</p>
+          <a href="#" class="text-blue-500 hover:underline">Read More</a>
+        </div>
 
+        <div class="border border-gray-300 rounded-md p-4">
+          <h2 class="text-xl font-semibold mb-2"> Judul Informasi</h2>
+          <p class="text-gray-600 mb-4">Deskripsi singkat tentang informasi.</p>
+          <a href="#" class="text-blue-500 hover:underline">Read More</a>
+        </div>
 
-    <!-- JavaScript Libraries -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/counterup/counterup.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+      
+        <!-- You can repeat the above structure for multiple blog posts -->
+      </div>
+    </div>
+  </main>
 
-    <!-- Template Javascript -->
-    <script type="module" src="https://cdn.jsdelivr.net/gh/pakarbi/js-pakarbi@0.0.7/js/main.js"></script>
+  <!-- About Section -->
+<section id="about" class="py-12">
+    <div class="max-w-3xl mx-auto text-center">
+      <h2 class="text-4xl font-bold mb-4">About Application</h2>
+      <p class="text-lg text-gray-600">
+        Deskripsi applikasi.
+      </p>
+    </div>
+  </section>
+  
+  <!-- Footer Section -->
+<footer class="bg-gray-200 py-4 text-center">
+    <p class="text-gray-600">© 2023 Nugis - All Rights Reserved</p>
+  </footer>
+
+  
 </body>
+<script src="module" href="./js/index.js"></script>
 
 </html>
