--- a/index.html
+++ b/index.html
@@ -74,19 +74,19 @@
         <div class="border border-gray-300 rounded-md p-4">
           <h2 class="text-xl font-semibold mb-2"> Judul Informasi</h2>
           <p class="text-gray-600 mb-4">Deskripsi singkat tentang informasi.</p>
-          <a href="#" class="text-blue-500 hover:underline">Read More</a>
+          <a href="./form/single_blog.html" class="text-blue-500 hover:underline">Read More</a>
         </div>
 
         <div class="border border-gray-300 rounded-md p-4">
           <h2 class="text-xl font-semibold mb-2"> Judul Informasi</h2>
           <p class="text-gray-600 mb-4">Deskripsi singkat tentang informasi.</p>
-          <a href="#" class="text-blue-500 hover:underline">Read More</a>
+          <a href="./form/single_blog.html" class="text-blue-500 hover:underline">Read More</a>
         </div>
 
         <div class="border border-gray-300 rounded-md p-4">
           <h2 class="text-xl font-semibold mb-2"> Judul Informasi</h2>
           <p class="text-gray-600 mb-4">Deskripsi singkat tentang informasi.</p>
-          <a href="#" class="text-blue-500 hover:underline">Read More</a>
+          <a href="./form/single_blog.html" class="text-blue-500 hover:underline">Read More</a>
         </div>
 
       
