--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                 <div class="flex space-x-4">
                     <a href="#about" class="text-gray-600 hover:text-gray-900">About</a>
                     <select onchange="location = this.value;" class="text-gray-600 hover:text-gray-900">
-                        <option value="#chapter1">Chapter 1</option>
-                        <option value="#chapter2">Chapter 2</option>
-                        <option value="#chapter3">Chapter 3</option>
-                        <option value="#chapter4">Chapter 4</option>
+                        <option href="./chap01/index.html">Chapter 1</option>
+                        <option href="./chap02/index.html">Chapter 2</option>
+                        <option href="./chap03/index.html">Chapter 3</option>
+                        <option href="./chap04/index.html">Chapter 4</option>
                         <option href="./form/login.html">Form Sign In | Chapter 5</option>
-                        <option value="#chapter6">Chapter 6</option>
-                        <option value="#chapter7">Chapter 7</option>
+                        <option href="../swagger/index.html">Chapter 6</option>
+                        <option href="">Chapter 7</option>
                     </select>
                 </div>
 
