--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
                 <div class="flex space-x-4">
                     <a href="#about" class="text-gray-600 hover:text-gray-900">About</a>
                     <select onchange="location = this.value;" class="text-gray-600 hover:text-gray-900">
-                        <option><a href="./chap01/index.html" class="text-gray-600 hover:text-gray-900">Chapter 1</a></option>
-                        <option><a href="./chap02/index.html" class="text-gray-600 hover:text-gray-900">Chapter 2</a></option>
-                        <option><a href="./chap03/index.html" class="text-gray-600 hover:text-gray-900">Chapter 3</a></option>
-                        <option><a href="./chap04/index.html" class="text-gray-600 hover:text-gray-900">Chapter 4</a></option>
+                        <option><a href="#" class="text-gray-600 hover:text-gray-900">Pilih menu</a></option>
+                        <option><a href="./chap01/" class="text-gray-600 hover:text-gray-900">Chapter 1</a></option>
+                        <option><a href="./chap02/" class="text-gray-600 hover:text-gray-900">Chapter 2</a></option>
+                        <option><a href="./chap03/" class="text-gray-600 hover:text-gray-900">Chapter 3</a></option>
+                        <option><a href="./chap04/" class="text-gray-600 hover:text-gray-900">Chapter 4</a></option>
                         <option><a href="./form/login.html" class="text-gray-600 hover:text-gray-900">Form Sign In | Chapter 5</a></option>
                         <option><a href="../swagger/index.html" class="text-gray-600 hover:text-gray-900">Chapter 6</a></option>
                         <option><a href="" class="text-gray-600 hover:text-gray-900">Chapter 7</a></option>
